fixed high score/timer row to align correctly with content box

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,12 +4,11 @@ body {
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position: center;
-  }
+}
 
 #highScoreAndTimerRow {
-    background-color: #ffffff;
-    margin-bottom: 20px;
-    max-width: 960px;
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
 
 #worldCapitalsTitle {
@@ -17,7 +16,11 @@ body {
     float: left;
 }
 
-#contentBox {
+#contentBox, #boxTimer {
     background-color: #ffffffdc;
     border: 3px dashed #7c7c7c;
+}
+
+#welcome, #highScores {
+    margin-bottom: 10px;
 }
